Edit sign-in to fix img alignment

--- a/src/app/firebasecomponents/sign-in/sign-in.component.css
+++ b/src/app/firebasecomponents/sign-in/sign-in.component.css
@@ -1,9 +1,10 @@
 .displayTable {
+    position: relative;
     display: table;
     width: 100%;
-    height: 100%;
+    height: 100%;  
 }
-  
+
 .displayTableCell {
     display: table-cell;
     vertical-align: middle;
@@ -11,20 +12,20 @@
     height: 100%;
 }
 
-h3 {
-    text-align: center;
-    font-size: 22px;
-    margin: 0 0 20px;
-}
-  
 .authBlock {
-    margin: 65px auto;
+    margin: 85px auto;
     max-width: 400px;
     background: white;
     padding: 30px 40px 10px;
     overflow: hidden;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.04);
     -webkit-box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.04);
+}
+
+h3 {
+    text-align: center;
+    font-size: 22px;
+    margin: 0 0 20px;
 }
   
 .formGroup {
@@ -145,7 +146,6 @@ input:-moz-placeholder {
 .redirectToLogin .redirect:hover {
     color:#f96ea8;
 }
-
 img {
     position: absolute;
     object-fit:fill;
